--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
+    <!-- <link rel="stylesheet" href="./styles/globals.css" /> -->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -124,7 +124,7 @@
             </p>
           </article>
           <article class="section__article-item">
-            <h3 class="section__article-title title-decor">Гаджеты</h3>
+          <h3 class="section__article-title title-decor">Гаджеты</h3>
             <p class="section__article-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
