--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <html lang="ru">
   <head>
@@ -124,7 +124,7 @@
             </p>
           </article>
           <article class="section__article-item">
-          <h3 class="section__article-title title-decor">Гаджеты</h3>
+            <h3 class="section__article-title title-decor">Гаджеты</h3>
             <p class="section__article-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
